# pyOPERA

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  TODO.md  asv.conf.json  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  works.py
.circleci/: config.yml
benchmarks/: benchmarks.py
dockerfiles/: Dockerfile  build_docker.sh
docs/: .buildinfo  api.html  benchmarks.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_sources/: api.rst.txt  usage.rst.txt
docs/source/: benchmarks.rst  conf.py  index.rst  usage.rst
libOPERA_Py/: __init__.py
pyOPERA/: opera.py
pyopera/opera/: opera.py
pyopera/opera/helpers/: opera_helpers.py
tests/: test_OPERA_model.py  test_opera_model.py  test_trial.py
tests/test_files/: Sample_50.smi
tests/test_opera/: test_opera_model.py
tests/test_opera/test_helpers/: test_parameters.py
tests/test_opera/test_opera_helpers/: test_format_endpoints_input.py
