[tool.poetry]
name = "pyopera"
version = "0.1.6"
description = "The NIH OPERA suite of models with Python specific functionality"
authors = ["Manuel Cabrera <cabrera.manuel555@gmail.com>"]
readme = "README.md"
include = ["liOPERA_Py"]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
